frontend-nanodegree-mobile-portfolio: added load visible image

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.png"></a>
+      <a href="/"><img  src="img/props.png" realsrc="img/profilepic.png" width="70" heigth="70"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
       
-      <a href="/"><img src="img/profile_small.png"></a>
+      <a href="/"><img src="img/props.png" realsrc="img/profile_small.png" width="70" heigth="70"></a>
       <p>Ekaterina Tatarinovich<br><span>etatarinovich18@gmail.com</span><br><span>+375445562242</span></p>
     </header>
 
@@ -27,25 +27,25 @@
       <div class="content">
         <ul>
           <li>
-            <img src="img/props.png" realsrc="img/project_2048_img.png" width="115" heigth="50">
+            <img src="img/props.png" realsrc="img/project_2048_img.png" width="105" heigth="53">
             <a href="project-2048.html">Build Your Own 2048!</a>
             <p>I made my own version of 2048. How cool is that!?</p>
           </li>
 
           <li>
-            <img src="img/props.png" realsrc="img/project_webperf_img.png"  width="115" heigth="62">
+            <img src="img/props.png" realsrc="img/project_webperf_img.png"  width="105" heigth="63">
             <a href="project-webperf.html">Website Performance Optimization</a>
             <p>Hey... this class looks familiar.</p>
           </li>
 
           <li>
-            <img src="img/props.png" realsrc="img/project-mobile_img.png"  width="115" heigth="61">
+            <img src="img/props.png" realsrc="img/project-mobile_img.png"  width="105" heigth="64">
             <a href="project-mobile.html">Mobile Web Development</a>
             <p>Making mobile apps isn't so hard after all.</p>
           </li>
 
           <li>
-            <img src="img/props.png" realsrc="views/images/pizzeria_small.png"  width="100" heigth="75">
+            <img src="img/props.png" realsrc="views/images/pizzeria_small.png"  width="105" heigth="75">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
