--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 
   <body>
     <header>
-      <a href="/"><img  src="img/props.png" realsrc="img/profilepic.png" width="70" heigth="70"></a>
+      <a href="/"><img src="img/profilepic.png"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
       
-      <a href="/"><img src="img/props.png" realsrc="img/profile_small.png" width="70" heigth="70"></a>
+      <a href="/"><img src="img/profile_small.png"></a>
       <p>Ekaterina Tatarinovich<br><span>etatarinovich18@gmail.com</span><br><span>+375445562242</span></p>
     </header>
 
@@ -27,25 +27,25 @@
       <div class="content">
         <ul>
           <li>
-            <img src="img/props.png" realsrc="img/project_2048_img.png" width="105" heigth="53">
+            <img src="img/project_2048_img.png">
             <a href="project-2048.html">Build Your Own 2048!</a>
             <p>I made my own version of 2048. How cool is that!?</p>
           </li>
 
           <li>
-            <img src="img/props.png" realsrc="img/project_webperf_img.png"  width="105" heigth="63">
+            <img src="img/project_webperf_img.png">
             <a href="project-webperf.html">Website Performance Optimization</a>
             <p>Hey... this class looks familiar.</p>
           </li>
 
           <li>
-            <img src="img/props.png" realsrc="img/project-mobile_img.png"  width="105" heigth="64">
+            <img src="img/project-mobile_img.png">
             <a href="project-mobile.html">Mobile Web Development</a>
             <p>Making mobile apps isn't so hard after all.</p>
           </li>
 
           <li>
-            <img src="img/props.png" realsrc="views/images/pizzeria_small.png"  width="105" heigth="75">
+            <img style="width: 100px;" src="views/images/pizzeria_small.png">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
@@ -59,9 +59,7 @@
 
     <script async>
       !function(a,b){a.GoogleAnalyticsObject=b,a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)},a[b].l=1*new Date}(window,"ga"),ga("create","UA-XXXX-Y"),ga("send","pageview");
-    </script>
-    <script>
-      function isVisible(a){var b=a.getBoundingClientRect(),c=document.documentElement.clientHeight,d=b.top>0&&b.top<c,e=b.bottom<c&&b.bottom>0;return d||e}function showVisible(){for(var a=document.getElementsByTagName("img"),b=0;b<a.length;b++){var c=a[b],d=c.getAttribute("realsrc");d&&isVisible(c)&&(c.src=d,c.setAttribute("realsrc",""))}}window.onscroll=showVisible,showVisible();
+      //Performance 
       function logCRP(){var a=window.performance.timing,b=a.domContentLoadedEventStart-a.domLoading,c=a.domComplete-a.domLoading,d=document.getElementById("crp-stats");d.textContent="DCL: "+b+"ms, onload: "+c+"ms"}window.addEventListener("load",function(a){logCRP()});
     </script>
     <script async src="js/analytics.js"></script>
