--- a/index.html
+++ b/index.html
@@ -65,6 +65,14 @@
       //Performance 
       function logCRP(){var a=window.performance.timing,b=a.domContentLoadedEventStart-a.domLoading,c=a.domComplete-a.domLoading,d=document.getElementById("crp-stats");d.textContent="DCL: "+b+"ms, onload: "+c+"ms"}window.addEventListener("load",function(a){logCRP()});
     </script>
+    <script src="https://ajax.googleapis.com/ajax/libs/webfont/1.6.16/webfont.js"></script>
+    <script>
+      WebFont.load({
+        google: {
+          families: ['Open Sans:400,700']
+        }
+      });
+    </script>
     <script async src="js/analytics.js"></script>
   </body>
 </html>
