frontend-nanodegree-mobile-portfolio: added fonts

--- a/index.html
+++ b/index.html
@@ -9,13 +9,19 @@
     <style>
       @font-face {
         font-family: "Open Sans";
-        src: url("fonts/OpenSansBold/OpenSansBold.ttf") format("truetype");
+        src: url("fonts/OpenSansBold/OpenSansBold.eot");
+        src: url("fonts/OpenSansBold/OpenSansBold.eot?#iefix")format("embedded-opentype"),
+        url("fonts/OpenSansBold/OpenSansBold.woff") format("woff"),
+        url("fonts/OpenSansBold/OpenSansBold.ttf") format("truetype");
         font-style: normal;
         font-weight: 700;
       }
       @font-face {
         font-family: "Open Sans";
-        src: url("fonts/OpenSansRegular/OpenSansRegular.ttf") format("truetype");
+        src: url("fonts/OpenSansRegular/OpenSansRegular.eot");
+        src: url("fonts/OpenSansRegular/OpenSansRegular.eot?#iefix")format("embedded-opentype"),
+        url("fonts/OpenSansRegular/OpenSansRegular.woff") format("woff"),
+        url("fonts/OpenSansRegular/OpenSansRegular.ttf") format("truetype");
         font-style: normal;
         font-weight: 400;
       }
